--- a/SecureFileStorage.web/Shared/MainLayout.razor
+++ b/SecureFileStorage.web/Shared/MainLayout.razor
@@ -1,15 +1,24 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>SecureFileStorage.Web</PageTitle>
+<CascadingValue Value="this">
+    <div class="page">
+        <div class="sidebar">
+            <NavMenu />
+        </div>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+        <main>
+            <article class="content px-4">
+                @Body
+            </article>
+        </main>
     </div>
+</CascadingValue>
 
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+@code {
+    public EventCallback OnAuthStateChanged { get; set; }
+
+    public void HandleAuthStateChanged()
+    {
+        StateHasChanged();
+    }
+}
