--- a/SecureFileStorage.web/Shared/NavMenu.razor
+++ b/SecureFileStorage.web/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="upload">
+                    <span class="oi oi-cloud-upload" aria-hidden="true"></span> Prenesi datoteku
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" @onclick="Logout">
                     <span class="oi oi-account-logout" aria-hidden="true"></span> Odjava
                 </NavLink>
