--- a/SecureFileStorage.web/Shared/NavMenu.razor
+++ b/SecureFileStorage.web/Shared/NavMenu.razor
@@ -1,5 +1,8 @@
-﻿@inject IJSRuntime JSRuntime
+﻿@using SecureFileStorage.Web.Services
+
+@inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
+@inject ITokenService TokenService
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -29,6 +32,22 @@
                     <span class="oi oi-cloud-upload" aria-hidden="true"></span> Prenesi datoteku
                 </NavLink>
             </div>
+            @if (isAdmin)
+            {
+                <div class="collapse" id="adminSection">
+                    <div class="admin-section mt-2 px-3">
+                        <div class="d-flex align-items-center justify-content-center mb-2 bg-primary text-white p-2">
+                            <span class="oi oi-lock-locked me-2" aria-hidden="true"></span>
+                            <span class="admin-title fw-bold text-uppercase">Admin Actions</span>
+                        </div>
+                        <div class="nav-item px-3">
+                            <NavLink class="nav-link" href="register">
+                                <span class="oi oi-plus me-2" aria-hidden="true"></span> Dodaj korisnika
+                            </NavLink>
+                        </div>
+                    </div>
+                </div>
+            }
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" @onclick="Logout">
                     <span class="oi oi-account-logout" aria-hidden="true"></span> Odjava
@@ -48,6 +67,7 @@
 
 @code {
     private bool isAuthenticated;
+    private bool isAdmin;
 
     protected override void OnInitialized()
     {
@@ -72,6 +92,13 @@
     {
         var token = await JSRuntime.InvokeAsync<string>("localStorage.getItem", "authToken");
         isAuthenticated = !string.IsNullOrWhiteSpace(token);
+
+        if (isAuthenticated) {
+            var userId = await TokenService.GetLoggedInUserIdAsync();
+            if (userId != null) {
+                isAdmin = await TokenService.UserIsAdmin(userId);
+            }
+        }
     }
 
     private void Logout()
